// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`拡張v1の遠征を再現する: role.oathbound / none 1`] = `
{
  "fingerprint": "7e316ef6d8ba23cd8a40ff4846f124298d80da1309b7d7f2e638a774f57d0ce6",
  "floor": 10,
  "status": "won",
  "turn": 893,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / none 1`] = `
{
  "fingerprint": "39ee420ac5c751d8a3ab17612f7e77fc6e1b644aa696c426afc73bb252b35931",
  "floor": 6,
  "status": "returned",
  "turn": 578,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / none 1`] = `
{
  "fingerprint": "7839076a106c2d12799aeb03452a950f26d1664d188caa2d6a88dc60a4003ee6",
  "floor": 6,
  "status": "returned",
  "turn": 561,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / none 1`] = `
{
  "fingerprint": "a16b2347e0a9e36b46853b3ca77bf8efb98af1c19f3b3a964b62fdf73f7d4b68",
  "floor": 10,
  "status": "won",
  "turn": 917,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / none 1`] = `
{
  "fingerprint": "510772cd401e4b6fa55aff52d8fbcf865da4559da541b49b6939ba4e253ebbef",
  "floor": 6,
  "status": "returned",
  "turn": 622,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / none 1`] = `
{
  "fingerprint": "b952d0d89a5680fa1b6063ada1dcde5bdaa2249affece5bfbf65f22e0519b212",
  "floor": 10,
  "status": "won",
  "turn": 885,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / none 1`] = `
{
  "fingerprint": "f52094453424f0c5273b9d3771b36ec13205467ac5caa410d27992bda5c022b8",
  "floor": 6,
  "status": "returned",
  "turn": 551,
}
`;

exports[`拡張v1の遠征を再現する: role.oathbound / lantern 1`] = `
{
  "fingerprint": "aef387ecb45c66ebf84f1e0f1d4b6c083f89d599315cde3f29fe4f9b435400cd",
  "floor": 10,
  "status": "won",
  "turn": 924,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-scout / lantern 1`] = `
{
  "fingerprint": "64beb43458f35ca6ff4b51b8637aa9741b9a06620494df48857366918403d35f",
  "floor": 6,
  "status": "returned",
  "turn": 553,
}
`;

exports[`拡張v1の遠征を再現する: role.lantern-priest / lantern 1`] = `
{
  "fingerprint": "ea3ae5c844c65021465b3d297081b737fa2bd79a5b2908b89b96c2316d166440",
  "floor": 6,
  "status": "returned",
  "turn": 562,
}
`;

exports[`拡張v1の遠征を再現する: role.relic-surveyor / lantern 1`] = `
{
  "fingerprint": "d7b06d24631cf1d329e0fa5c845c0c1c38b8eb28049c0b73ebab4f534671b981",
  "floor": 10,
  "status": "won",
  "turn": 813,
}
`;

exports[`拡張v1の遠征を再現する: role.ash-apothecary / lantern 1`] = `
{
  "fingerprint": "762ab96feb95f5c4c3bf3a984381abdff087d50893e69feaf611a19b96f110d1",
  "floor": 6,
  "status": "returned",
  "turn": 609,
}
`;

exports[`拡張v1の遠征を再現する: role.iron-oath-vanguard / lantern 1`] = `
{
  "fingerprint": "763659c197f843b959d905302d152b89f63137d31bc652b00a208bba7f4de7a8",
  "floor": 10,
  "status": "won",
  "turn": 864,
}
`;

exports[`拡張v1の遠征を再現する: role.keyshadow-rogue / lantern 1`] = `
{
  "fingerprint": "3a093efb25fa98f9457ba85bc5bc46038510a8014ad139171b8ebe82e690c58c",
  "floor": 6,
  "status": "returned",
  "turn": 476,
}
`;
